--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
     <h1>Minesweeper</h1>
 
     <div class="top-left-menu">
-        <button>
-
-            🥇 <br>
+            Theme:  <span class="theme-btn" onclick="setMode('light')">☀️</span> 
+                    <span class="theme-btn" onclick="setMode('dark')">🌑</span> <br>
+            <p>Best times: <br></p>
             Easy: <span class="best-easy-score">No time yet...</span> <br>
             Medium: <span class="best-medium-score">No time yet...</span> <br>
             Hard: <span class="best-hard-score">No time yet...</span>
-        </button>
+            
     </div>
 
     <div class="hud">
-        <!-- <p>Choose difficulty</p> -->
         <button onclick="setDifficulty(this)">Easy</button>
         <button onclick="setDifficulty(this)">Medium</button>
         <button onclick="setDifficulty(this)">Hard</button>
@@ -29,8 +28,8 @@
 
     <div class="info">
         <button class="life-counter">Lives:<br><span>❤️❤️❤️</span></button>
-        <button onclick="hint()" class="hint-btn">Hints:<br><span>🔎🔎🔎</span></button>
-        <button onclick="safeClick()" class="safe-click-btn">Safe clicks:<br> <span>✔️✔️✔️</span></button>
+        <button title="Click on a cell to reveal it's neighbours" onclick="hint()" class="hint-btn power-btn">Hints:<br><span>🔎🔎🔎</span></button>
+        <button title="Mark a random cells that is safe to click" onclick="safeClick()" class="safe-click-btn power-btn">Safe clicks:<br> <span>✔️✔️✔️</span></button>
         <button class="mine-counter">Mines left: <br><span>14</span>🚩</button>
         <button class="timer">Time: <br><span>0</span>⏱️</button>
     </div>
@@ -40,7 +39,11 @@
         <div class="board" oncontextmenu="return false"></div>
     </div>
 
-    <button onclick="undo()" class="undo-btn"><span>↩️</span></button>
+    <div class="more-info">
+        <button title="Delete 3 random unreveald mines" onclick="exterminate()" class="mine-ext-btn power-btn">💥</button>
+        <button title="Undo last move" onclick="undo()" class="undo-btn power-btn">↩️</button>
+        <button title="Select an area to reveal for 1.5 seconds" onclick="megaHint()" class="mega-hint-btn power-btn">🧠</button>
+    </div>
 
     <script src="js/script.js"></script>
     <script src="js/extras.js"></script>
